--- a/index.html
+++ b/index.html
@@ -174,15 +174,20 @@
                     <!-- <a class="social-icon shadow" href="https://scholar.google.com/citations?user=TxmhXEwAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar" style="font-size:1.5em"></i></a> -->
                 </div>
                 <div class="social-icons d-print-none d-none d-lg-block">
-                    <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i class="fas fa-envelope"></i></a>
+                    <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i
+                            class="fas fa-envelope"></i></a>
                     <a class="social-icon shadow" href="https://www.linkedin.com/in/gokasci/" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon shadow" href="https://github.com/gasci" target="_blank"><i class="fab fa-github"></i></a>
+                    <a class="social-icon shadow" href="https://github.com/gasci" target="_blank"><i
+                            class="fab fa-github"></i></a>
                     <!-- <a class="social-icon shadow" href="https://scholar.google.com/citations?user=TxmhXEwAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar" style="font-size:1.5em"></i></a> -->
                 </div>
 
                 <div class="subheading d-print-inline d-none" style="font-size:20px">
-                    <u>Linkedin:</u> <a href="https://www.linkedin.com/in/gokasci/">gokasci</a> | <u>GitHub:</u> <a href="https://github.com/gasci">gasci</a> | <u>Website:</u> <a href="https://drgoktugasci.com/">drgoktugasci.com</a> | <u>E-mail:</u> <a href="mailto:drgoktugasci@gmail.com">drgoktugasci@gmail.com</a>
+                    <u>Linkedin:</u> <a href="https://www.linkedin.com/in/gokasci/">gokasci</a> | <u>GitHub:</u> <a
+                        href="https://github.com/gasci">gasci</a> | <u>Website:</u> <a
+                        href="https://drgoktugasci.com/">drgoktugasci.com</a> | <u>E-mail:</u> <a
+                        href="mailto:drgoktugasci@gmail.com">drgoktugasci@gmail.com</a>
                 </div>
             </div>
         </section>
@@ -202,13 +207,17 @@
                         </div>
                         <ul>
                             <li>
-                                Set up a new DICOM annotation tool (Encord) and led a data annotation team of radiologists
+                                Set up a new DICOM annotation tool (Encord) and led a data annotation team of
+                                radiologists
                             </li>
                             <li>
-                                Built an ETL/ELT orchestration system (Airflow, dbt) to monitor and optimize machine learning pipelines
+                                Built ETL/ELT pipelines (Airflow, dbt, S3) and dashboards (Metabase) to monitor and
+                                optimize machine learning
+                                pipelines
                             </li>
                             <li>
-                                Built a monorepo, cross-team, Python library to ingest, transform, and serve company data
+                                Built a monorepo, cross-team, Python library to ingest, transform, and serve company
+                                data
                             </li>
                         </ul>
                     </div>
@@ -412,14 +421,16 @@
                     <div class="flex-grow-1">
                         <h4 class="mb-0">ISTANBUL UNIVERSITY, FACULTY OF MEDICINE</h4>
                         <div class="subheading mb-3">
-                            <a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank" class="text-danger">Doctor of
+                            <a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank"
+                                class="text-danger">Doctor of
                                 Medicine&nbsp;<i class="fas fa-link"></i>
                             </a>
                         </div>
                         <div>
                             <ul>
                                 <li>
-                                    <a class="text-danger" href="https://www.tev.org.tr/burs/tr/12/Yurt-ici-Burslar-Ek-Bilgiler"
+                                    <a class="text-danger"
+                                        href="https://www.tev.org.tr/burs/tr/12/Yurt-ici-Burslar-Ek-Bilgiler"
                                         target="_blank">Outstanding Success Award for Higher Education, TEV (2015, 2016,
                                         2017, 2018, 2019,
                                         2020)&nbsp;<i class="fas fa-link"></i></a>
@@ -506,17 +517,21 @@
 
                         <h6 class="mt-3">Data Science & Big Data</h6>
                         <ul>
-                            <li>Apache Airflow | Apache Spark (PySpark) | Airbyte |  Apache Kafka (Python) | dbt | Data Modeling | Snowflake | Keras | scikit-learn | pandas | Metabase | Tableau</li>
+                            <li>Apache Airflow | Apache Spark (PySpark) | Airbyte | Apache Kafka (Python) | dbt | Data
+                                Modeling | Snowflake | Keras | scikit-learn | pandas | Metabase | Tableau</li>
                         </ul>
 
                         <h6>Back-End Development & DevOps</h6>
                         <ul>
-                            <li>Python | SQL | Bash Scripting | AWS S3, RDS, EC2, ECS, EKS, Lambda | GitHub Actions | MongoDB | PostgreSQL | Django | Flask | pytest | Docker | Kubernetes | Django Rest Framework | Heroku</li>
+                            <li>Python | SQL | Bash Scripting | AWS S3, RDS, EC2, ECS, EKS, Lambda | GitHub Actions |
+                                MongoDB | PostgreSQL | Django | Flask | pytest | Docker | Kubernetes | Django Rest
+                                Framework | Heroku</li>
                         </ul>
 
                         <h6>Front-End Development</h6>
                         <ul>
-                            <li>Vue.js | JavaScript | TypeScript | Apache Cordova | Vuetify | Bootstrap | Bulma | Electron | Adobe XD</li>
+                            <li>Vue.js | JavaScript | TypeScript | Apache Cordova | Vuetify | Bootstrap | Bulma |
+                                Electron | Adobe XD</li>
                         </ul>
 
                     </div>
@@ -526,7 +541,8 @@
 
                         <h6 class="mt-3">Product Development</h6>
                         <ul>
-                            <li>GitHub | Atlassian JIRA/Confluence | Asana | Google Analytics | Google Firebase | Scrum</li>
+                            <li>GitHub | Atlassian JIRA/Confluence | Asana | Google Analytics | Google Firebase | Scrum
+                            </li>
                         </ul>
 
                         <h6>Domain Knowledge</h6>
@@ -543,8 +559,9 @@
         <!-- Portfolio-->
         <section class="resume-section light-background d-print-none" id="portfolio">
             <div class="resume-section-content">
-                <h3 class="section-header"><u>Projects</u> <i class="fas fa-code text-warning"></i> & <u>Publications</u> <i
-                        class="fas fa-book text-warning"></i></h3>
+                <h3 class="section-header"><u>Projects</u> <i class="fas fa-code text-warning"></i> &
+                    <u>Publications</u> <i class="fas fa-book text-warning"></i>
+                </h3>
 
                 <h5 class="text-warning">Projects</h5>
                 <h6 class="mt-3">Data Science & Big Data</h6>
@@ -780,8 +797,11 @@
                 <h5 class="text-warning mt-4">Publications</h5>
                 <ul class="fa-ul mb-0">
                     <li class="mb-2">
-                        <a href="https://img1.wsimg.com/blobby/go/18b3d75e-e099-4577-a0b2-00756e97dcc4/downloads/Incidental%20pulmonary%20findings%20on%20chest%20compute.pdf?ver=1658984737208" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Incidental pulmonary findings on chest computed tomography scans of 3010 non-COVID patients in Istanbul&nbsp;<i class="fas fa-link"></i>
+                        <a href="https://img1.wsimg.com/blobby/go/18b3d75e-e099-4577-a0b2-00756e97dcc4/downloads/Incidental%20pulmonary%20findings%20on%20chest%20compute.pdf?ver=1658984737208"
+                            target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Incidental pulmonary
+                            findings on chest computed tomography scans of 3010 non-COVID patients in Istanbul&nbsp;<i
+                                class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
@@ -804,7 +824,7 @@
             </div>
         </section>
 
-        
+
         <!-- Awards-->
         <section class="resume-section d-print-none" id="awards">
             <div class="resume-section-content">
@@ -1204,8 +1224,9 @@
                 <div class="mt-4">
                     <i class="fas fa-3x fa-running social"></i>&nbsp;&#183;&nbsp;<i
                         class="fas fa-3x fa-table-tennis social"></i>&nbsp;&#183;&nbsp;<i
-                        class="fas fa-3x fa-biking social"></i>&nbsp;&#183;&nbsp;<a href="siir.html" class="text-danger" target="_blank" style="text-decoration:underline; font-weight:bold"><i
-                        class="fas fa-3x fa-pen-alt social"></i></a>&nbsp;&#183;&nbsp;
+                        class="fas fa-3x fa-biking social"></i>&nbsp;&#183;&nbsp;<a href="siir.html" class="text-danger"
+                        target="_blank" style="text-decoration:underline; font-weight:bold"><i
+                            class="fas fa-3x fa-pen-alt social"></i></a>&nbsp;&#183;&nbsp;
                     <i class="fas fa-3x fa-laptop-medical social"></i>&nbsp;&#183;&nbsp;
                     <i class="fas fa-3x fa-puzzle-piece social"></i>
                 </div>
