--- a/index.html
+++ b/index.html
@@ -872,6 +872,15 @@
 
                 <h6 class="mt-3">Online Courses</h6>
                 <ul class="fa-ul mb-0">
+
+                    <li>
+                        <a href="https://www.udemy.com/certificate/UC-e26e50a7-862b-4958-9048-0e7fb0c0f5b6/"
+                            target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183;
+                            Apache Spark 3 - Real-time Stream Processing using Python&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+
                     <li>
                         <a href="https://www.udemy.com/certificate/UC-1048bee0-bdc6-4e7f-b265-48e71d2ed42d/"
                             target="_blank" class="text-danger">
