--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
                                 data
                             </li>
                             <li>
-                                Set up a new DICOM annotation tool (Encord) and led a data annotation team of
+                                Set up a new DICOM annotation tool and connected its REST API (Encord) and led a data
+                                annotation
+                                team of
                                 radiologists
                             </li>
                         </ul>
