--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                 data
                             </li>
                             <li>
-                                Set up a new DICOM annotation tool and connected its REST API (Encord) and led a data
+                                Set up a new DICOM annotation tool (Encord), connected its REST API, and led a data
                                 annotation
                                 team of
                                 radiologists
