--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
                                 pipelines
                             </li>
                             <li>
+                                Built a Data Warehouse (PostgreSQL) and a Data Lake (S3) serving data to the ML
+                                Engineers and to the executive team
+                            </li>
+                            <li>
                                 Built a monorepo, cross-team, Python library to ingest, transform, and serve company
                                 data
                             </li>
