update last two positions

--- a/index.html
+++ b/index.html
@@ -207,23 +207,22 @@
                         </div>
                         <ul>
                             <li>
-                                Built ETL/ELT pipelines (Airflow, dbt, S3) and dashboards (Metabase) to monitor and
-                                optimize machine learning
-                                pipelines
+                                Built ETL/ELT pipelines (Airflow, dbt, Kubernetes) to monitor and optimize machine
+                                learning pipelines
                             </li>
                             <li>
-                                Built a Data Warehouse (PostgreSQL) and a Data Lake (S3) serving data to the ML
-                                Engineers and to the executive team
+                                Built a Data Warehouse (PostgreSQL) and a Data Lake (S3) alongside the dashboards
+                                (Metabase) providing insights about
+                                100000+
+                                patient's DICOM data and pipelines for model training
                             </li>
                             <li>
-                                Built a monorepo, cross-team, Python library to ingest, transform, and serve company
-                                data
+                                Built a monorepo, cross-team, Python (pandas, Docker) library to ingest, transform, and
+                                serve company data
                             </li>
                             <li>
                                 Set up a new DICOM annotation tool (Encord), connected its REST API, and led a data
-                                annotation
-                                team of
-                                radiologists
+                                annotation team of radiologists
                             </li>
                         </ul>
                     </div>
@@ -243,20 +242,17 @@
                         </div>
                         <ul>
                             <li>
-                                Created and maintained ETL and ELT pipelines and dashboards of 40+ Amazon brands that
-                                generated
-                                250+ M dollars of revenue in
-                                2022 using pandas, Snowflake, Airflow, PySpark, data build tool, Selenium, AWS, Docker,
-                                and Tableau
+                                Built ETL/ELT pipelines (Airflow, dbt, Snowflake) of 40+ Amazon brands that generated
+                                250+ M dollars of revenue in 2021
                             </li>
                             <li>
-                                Built a complete Airflow deployment that runs on AWS and Docker, and maintained DAG
-                                pipelines to orchestrate Snowflake data pipelines
-                                to improve the decision making process
+                                Deployed an Airflow environment (AWS, Docker), and built data pipelines to improve the
+                                decision-making processes for
+                                various
+                                business development teams
                             </li>
                             <li>
-                                Built a complete Python repository for ETL/ELT jobs and REST API communication with the
-                                best software development practices
+                                Built a Python (pandas, PySpark) repository for ETL/ELT jobs, and REST API communication
                             </li>
                         </ul>
                     </div>
