add Scala to your language list

--- a/index.html
+++ b/index.html
@@ -525,7 +525,8 @@
 
                         <h6>Back-End Development & DevOps</h6>
                         <ul>
-                            <li>Python | SQL | Bash Scripting | AWS S3, RDS, EC2, ECS, EKS, Lambda | GitHub Actions |
+                            <li>Python | SQL | Scala | Bash Scripting | AWS S3, RDS, EC2, ECS, EKS, Lambda | GitHub
+                                Actions |
                                 MongoDB | PostgreSQL | Django | Flask | pytest | Docker | Kubernetes | Django Rest
                                 Framework | Heroku</li>
                         </ul>
