--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                         <h6 class="mt-3">Data Science & Big Data</h6>
                         <ul>
                             <li>Apache Airflow | Apache Spark (PySpark) | Airbyte | Apache Kafka (Python) | dbt | Data
-                                Modeling | Snowflake | mlflow |  Keras | scikit-learn | pandas | Metabase | Looker
+                                Modeling | Snowflake | MLflow |  Keras | scikit-learn | pandas | Metabase | Looker
                                 | Tableau</li>
                         </ul>
 
