--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
                                 improve platform features and marketing performance
                             </li>
                             <li>
-                                Designed and coded all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS
+                                Designed and implemented all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end
+                                (AWS
                                 RDS, AWS S3, Heroku, Django, Django Rest Framework) features using cross-platform
                                 software allowing development and maintenance on one codebase for web, iOS, and Android
                                 applications
@@ -355,7 +356,8 @@
                                 medical cases be studied, improving online medical education quality in Turkey
                             </li>
                             <li>
-                                Designed and coded all front-end (Materialize.css, jQuery, Apache Cordova) features
+                                Designed and implemented all front-end (Materialize.css, jQuery, Apache Cordova)
+                                features
                                 using cross-platform software allowing development and maintenance on one codebase for
                                 web, iOS, and Android applications
                             </li>
