--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                             <ul>
                                 <li><a class="text-danger"
                                         href="https://www.tev.org.tr/burs-yurt-disi-burs-basvurulari-ie-business-school-ispanya-burslari/tr/31"
-                                        target="_blank">IE - TEV Joint Scholarship (100% of the fee + life
+                                        target="_blank">IE - TEV Joint Scholarship (100% of the fee + living
                                         expenses)&nbsp;<i class="fas fa-link"></i></a></li>
                                 <li>GPA: 3.72/4 &#183; <a href="assets/pdf/ie_transcript.pdf" target="_blank"
                                         class="text-danger">Transcript&nbsp;<i class="fas fa-link"></i></a></li>
