--- a/index.html
+++ b/index.html
@@ -207,22 +207,23 @@
                         </div>
                         <ul>
                             <li>
-                                Built ETL/ELT pipelines (Airflow, dbt, Kubernetes) to monitor and optimize machine
-                                learning pipelines
+                                Designed and built ETL/ELT pipelines (Airflow, Airbyte, dbt, Kubernetes, Argo CD)
+                                shortening the product development
+                                cycle by 90%.
                             </li>
                             <li>
-                                Built a Data Warehouse (PostgreSQL) and a Data Lake (S3) alongside the dashboards
-                                (Metabase) providing insights about
-                                100000+
-                                patient's DICOM data and pipelines for model training
+                                Designed and built a Data Warehouse (PostgreSQL) and a Data Lakehouse (S3, Delta)
+                                alongside the dashboards (Metabase)
+                                making 100000+ patients’ data available for data pipelines and model training.
                             </li>
                             <li>
-                                Built a monorepo, cross-team, Python (pandas, Docker) library to ingest, transform, and
-                                serve company data
+                                Built a data and ML pipeline management library (pandas, Great Expectations, Docker) to
+                                ingest, transform, and serve
+                                company data.
                             </li>
                             <li>
-                                Set up a new DICOM annotation tool (Encord), connected its REST API, and led a data
-                                annotation team of radiologists
+                                Set up and managed two annotation platforms (Encord, Label Studio), and led a data
+                                annotation team of radiologists.
                             </li>
                         </ul>
                     </div>
@@ -243,16 +244,17 @@
                         <ul>
                             <li>
                                 Built ETL/ELT pipelines (Airflow, dbt, Snowflake) of 40+ Amazon brands that generated
-                                250+ M dollars of revenue in 2021
+                                250+ M dollars of revenue in 2021.
                             </li>
                             <li>
                                 Deployed an Airflow environment (AWS, Docker), and built data pipelines to improve the
                                 decision-making processes for
                                 various
-                                business development teams
+                                business development teams.
                             </li>
                             <li>
-                                Built a Python (pandas, PySpark) repository for ETL/ELT jobs, and REST API communication
+                                Built a Python (pandas, PySpark) repository for ETL/ELT jobs, and REST API
+                                communication.
                             </li>
                         </ul>
                     </div>
@@ -272,19 +274,21 @@
                         </div>
                         <ul>
                             <li>
-                                Preprocessed and analyzed 15000+ users’ anonymized health data (pandas, scikit-learn) to
-                                improve platform features and marketing performance
+                                Preprocessed and analyzed 20000+ users’ anonymized health data to improve platform
+                                features and marketing performance.
                             </li>
                             <li>
                                 Designed and implemented all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end
-                                (AWS
-                                RDS, AWS S3, Heroku, Django, Django Rest Framework) features using cross-platform
-                                software allowing development and maintenance on one codebase for web, iOS, and Android
-                                applications
+                                (Heroku, Django, AWS) features
+                                using cross-
+                                platform software allowing development and maintenance on one codebase for web, iOS, and
+                                Android applications.
                             </li>
                             <li>
                                 Led a team of 6 nutritionists generating 200+ special recipes and completing 150+ online
-                                nutrition consultancy meetings, enabling 15000+ users to develop healthy eating habits
+                                nutrition consultancy meetings,
+                                enabling
+                                20000+ users to develop healthy eating habits.
                             </li>
                         </ul>
                     </div>
@@ -303,11 +307,11 @@
                         <ul>
                             <li>
                                 Created Crunchbase e-mail automation and developed web scraping scripts enabling the
-                                origination of 100+ companies in a few minutes
+                                origination of 100+ companies in a few minutes.
                             </li>
                             <li>
                                 Arranged 30+ meetings with high-potential companies and created 2 one-pagers that
-                                summarize business models and opportunities for the investment committee
+                                summarize business models and opportunities for the investment committee.
                             </li>
                         </ul>
                     </div>
@@ -328,7 +332,7 @@
                             <li>
                                 Completed rotations in <strong>General Surgery, Pediatrics, Internal Medicine,
                                     Gynaecology, Neurology, Cardiology, Pulmonology, Emergency Medicine, Psychiatry,
-                                    Dermatology, Family Medicine, and Algology</strong>
+                                    Dermatology, Family Medicine, and Algology</strong>.
                             </li>
                         </ul>
                     </div>
@@ -349,17 +353,17 @@
                         <ul>
                             <li>
                                 Created the business model and after succeeding at TÜSİAD's Bu Gençlikte İş Var
-                                incubator program, our team earned the mentorship of Eczacıbaşı Holding
+                                incubator program, our team earned the mentorship of Eczacıbaşı Holding.
                             </li>
                             <li>
                                 Led a team of 25+ medical educators generating 9000+ questions and helping 600000+
-                                medical cases be studied, improving online medical education quality in Turkey
+                                medical cases be studied, improving online medical education quality in Turkey.
                             </li>
                             <li>
                                 Designed and implemented all front-end (Materialize.css, jQuery, Apache Cordova)
                                 features
                                 using cross-platform software allowing development and maintenance on one codebase for
-                                web, iOS, and Android applications
+                                web, iOS, and Android applications.
                             </li>
                         </ul>
                     </div>
@@ -380,7 +384,7 @@
                             <li>
                                 Performed 40+ plasmid DNA preparations; bacteria transformations; PCR and real-time PCR,
                                 gene cloning and mutagenesis procedures; cell culture and cell transfections and cell
-                                lysates for protein-protein interactions assays
+                                lysates for protein-protein interactions assays.
                             </li>
                         </ul>
                     </div>
@@ -521,7 +525,8 @@
 
                         <h6 class="mt-3">Data Science & Big Data</h6>
                         <ul>
-                            <li>Apache Airflow | Apache Spark (PySpark) | Airbyte | Apache Kafka (Python) | dbt | Data
+                            <li>Apache Airflow | Apache Spark (PySpark) | Airbyte | Apache Kafka (Python) | dbt | Great
+                                Expectations | Data
                                 Modeling | Snowflake | MLflow |  Keras | scikit-learn | pandas | Metabase | Looker
                                 | Tableau</li>
                         </ul>
@@ -529,7 +534,7 @@
                         <h6>Back-End Development & DevOps</h6>
                         <ul>
                             <li>Python | SQL | Scala | Bash Scripting | AWS S3, RDS, EC2, ECS, EKS, Lambda | GitHub
-                                Actions |
+                                Actions | Argo CD | 
                                 MongoDB | PostgreSQL | Django | Flask | pytest | Docker | Kubernetes | Django Rest
                                 Framework | Heroku</li>
                         </ul>
@@ -1044,7 +1049,7 @@
                     <li>
 
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> Cetin Ceviz
-                        Entrepreneurial Camp Award 2th Place, "Curiosmo"
+                        Entrepreneurial Camp Award 2nd Place, "Curiosmo"
                         <div class="mt-1 mb-2">
                             <a type="button" class="btn btn-warning text-dark btn-sm"
                                 href="assets/img/cetin_cevi certificate.png" target="_blank">Certificate&nbsp;<i
