--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            Co-Founder, Product Manager, Full-Stack Developer
+                            Co-Founder, Full-Stack Developer
                         </h4>
                         <div class="subheading mb-3">
                             <a href="http://mealdoc.com/" target="_blank" class="text-danger">Mealdoc:
@@ -344,7 +344,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            Co-Founder, Product Manager, Front-End Developer
+                            Co-Founder, Front-End Developer
                         </h4>
                         <div class="subheading mb-3">
                             <a class="text-danger">Curiosmo: Personal
