--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 
                         <h6>Back-End Development & DevOps</h6>
                         <ul>
-                            <li>Python | SQL | Scala | Bash Scripting | AWS S3, RDS, EC2, ECS, EKS, Lambda | GitHub
+                            <li>Python | SQL | Scala | Bash Scripting | AWS | Azure | GitHub
                                 Actions | Argo CD | 
                                 MongoDB | PostgreSQL | Django | Flask | pytest | Docker | Kubernetes | Django Rest
                                 Framework | Heroku</li>
