--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
                                 cycle by 90%.
                             </li>
                             <li>
-                                Designed and built a Data Warehouse (PostgreSQL) and a Data Lakehouse (S3, Delta)
+                                Designed and built a Data Warehouse (PostgreSQL) and a Data Lakehouse (S3, Delta Hive,
+                                Trino)
                                 alongside the dashboards (Metabase)
                                 making 100000+ patients’ data available for data pipelines and model training.
                             </li>
@@ -527,7 +528,8 @@
                         <ul>
                             <li>Apache Airflow | Apache Spark (PySpark) | Airbyte | Apache Kafka (Python) | dbt | Great
                                 Expectations | Data
-                                Modeling | Snowflake | MLflow |  Keras | scikit-learn | pandas | Metabase | Looker
+                                Modeling | Snowflake | Trino | MLflow |  Keras | scikit-learn | pandas | Metabase |
+                                Looker
                                 | Tableau</li>
                         </ul>
 
