--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
                                 cycle by 90%.
                             </li>
                             <li>
-                                Designed and built a Data Warehouse (PostgreSQL) and a Data Lakehouse (S3, Delta Hive,
-                                Trino)
+                                Designed and built a Data Warehouse (PostgreSQL) and a Data Lakehouse (S3, Delta, Trino)
                                 alongside the dashboards (Metabase)
                                 making 100000+ patients’ data available for data pipelines and model training.
                             </li>
