--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                                     <i class="fas fa-link"></i>
                                 </a>
                                 &#183;
-                                <a href="https://words-de.herokuapp.com/swagger/" target="_blank" class="text-danger">
+                                <a href="https://cardly-api.herokuapp.com/swagger/" target="_blank" class="text-danger">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
                                     Back-End API
                                     <i class="fas fa-link"></i>
