--- a/index.html
+++ b/index.html
@@ -196,14 +196,31 @@
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
                 <h3 class="section-header"><u>Experience</u></h3>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            Senior Data Engineer
-                        </h4>
-                        <div class="subheading mb-3">
                             <a href="https://www.floy.com/" target="_blank" class="text-danger">Floy:
                                 Maximize Human Health&nbsp;<i class="fas fa-link"></i></a>
+                        </h4>
+
+                        <div class="subheading text-dark mb-3">
+                            Head of Data
+                        </div>
+                        <ul>
+                            <li>
+                                Led a data team of 2 data specialists and a data annotation team of 4 radiologists.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0 text-right">
+                        <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
+                        <span class="text-primary">July 2023 - Present</span>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
+                    <div class="flex-grow-1">
+                        <div class="subheading text-dark mb-3">
+                            Senior Data Engineer
                         </div>
                         <ul>
                             <li>
@@ -228,18 +245,17 @@
                         </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
-                        <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
-                        <span class="text-primary">July 2022 - Present</span>
+                        <span class="text-primary">July 2022 - July 2023</span>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            Data Engineer
-                        </h4>
-                        <div class="subheading mb-3">
                             <a href="https://sellerx.com/" target="_blank" class="text-danger">SellerX:
                                 We Buy and Grow Amazon Businesses&nbsp;<i class="fas fa-link"></i></a>
+                        </h4>
+                        <div class="subheading mb-3 text-dark">
+                            Data Engineer
                         </div>
                         <ul>
                             <li>
@@ -266,11 +282,11 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            Co-Founder, Full-Stack Developer
-                        </h4>
-                        <div class="subheading mb-3">
                             <a href="http://mealdoc.com/" target="_blank" class="text-danger">Mealdoc:
                                 AI-powered Healthy Diet&nbsp;<i class="fas fa-link"></i></a>
+                        </h4>
+                        <div class="subheading text-dark  mb-3">
+                            Co-Founder, Full-Stack Developer
                         </div>
                         <ul>
                             <li>
@@ -299,10 +315,10 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4 d-print-none">
                     <div class="flex-grow-1">
-                        <h4 class="mb-0">Investment Analyst</h4>
-                        <div class="subheading mb-3">
-                            <a href="https://www.vincivc.com/" target="_blank" class="text-danger">Vinci
-                                Venture Capital&nbsp;<i class="fas fa-link"></i></a>
+                        <h4 class="mb-0"><a href="https://www.vincivc.com/" target="_blank" class="text-danger">Vinci
+                                Venture Capital&nbsp;<i class="fas fa-link"></i></a></h4>
+                        <div class="subheading text-dark mb-3">
+                            Investment Analyst
                         </div>
                         <ul>
                             <li>
@@ -322,11 +338,11 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4 d-print-none">
                     <div class="flex-grow-1">
-                        <h4 class="mb-0">Medical Intern</h4>
-                        <div class="subheading mb-3">
-                            <a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank"
-                                class="text-danger">Istanbul University, Faculty of Medicine&nbsp;<i
-                                    class="fas fa-link"></i></a>
+                        <h4 class="mb-0"><a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank"
+                                class="text-danger">Istanbul University, Faculty of
+                                Medicine&nbsp;<i class="fas fa-link"></i></a></h4>
+                        <div class="subheading text-dark mb-3">
+                            Medical Intern
                         </div>
                         <ul>
                             <li>
@@ -344,11 +360,11 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            Co-Founder, Front-End Developer
-                        </h4>
-                        <div class="subheading mb-3">
                             <a class="text-danger">Curiosmo: Personal
                                 Exam Assistant</a>
+                        </h4>
+                        <div class="subheading text-dark mb-3">
+                            Co-Founder, Front-End Developer
                         </div>
                         <ul>
                             <li>
@@ -374,11 +390,12 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
-                        <h4 class="mb-0">Research Intern</h4>
-                        <div class="subheading mb-3">
-                            <a href="https://medicine.yale.edu/lab/gunel/" target="_blank" class="text-danger">Yale
+                        <h4 class="mb-0"><a href="https://medicine.yale.edu/lab/gunel/" target="_blank"
+                                class="text-danger">Yale
                                 University School of Medicine, Gunel
-                                Lab&nbsp;<i class="fas fa-link"></i></a>
+                                Lab&nbsp;<i class="fas fa-link"></i></a></h4>
+                        <div class="subheading text-dark mb-3">
+                            Research Intern
                         </div>
                         <ul>
                             <li>
