--- a/index.html
+++ b/index.html
@@ -229,18 +229,18 @@
                                 cycle by 90%.
                             </li>
                             <li>
+                                Set up two annotation platforms (Encord, Label Studio) and improved the annotation
+                                team's efficiency by 300%.
+                            </li>
+                            <li>
                                 Designed and built a Data Warehouse (PostgreSQL) and a Data Lakehouse (S3, Delta, Trino)
                                 alongside the dashboards (Metabase)
-                                making 100000+ patients’ data available for data pipelines and model training.
+                                making 100000+ patients' data available for data pipelines and model training.
                             </li>
                             <li>
                                 Built a data and ML pipeline management library (pandas, Great Expectations, Docker) to
                                 ingest, transform, and serve
                                 company data.
-                            </li>
-                            <li>
-                                Set up and managed two annotation platforms (Encord, Label Studio), and led a data
-                                annotation team of radiologists.
                             </li>
                         </ul>
                     </div>
