--- a/index.html
+++ b/index.html
@@ -428,6 +428,11 @@
                         </div>
                         <div>
                             <ul>
+                                <li>Their article
+                                    about my career transition &#183; <a
+                                        href="https://www.ie.edu/uncover-ie/the-master-in-business-analytics-big-data-a-gateway-to-new-challenges/"
+                                        target="_blank" class="text-danger">A Gateway to New Challenges&nbsp;<i
+                                            class="fas fa-link"></i></a></li>
                                 <li><a class="text-danger"
                                         href="https://www.tev.org.tr/burs-yurt-disi-burs-basvurulari-ie-business-school-ispanya-burslari/tr/31"
                                         target="_blank">IE - TEV Joint Scholarship (100% of the fee + living
